@@ -1,3 +1,7 @@
+2001-04-24  Damon Chaplin  <damon@ximian.com>
+
+	* gtkdoc-scanobj.in: copied --outputdir option from gtkdoc-scangobj.in.
+
 Fri Apr 13 15:25:44 2001  Owen Taylor  <otaylor@redhat.com>
 
 	* gtkdoc-mkdb.in: Restore call to OutputBook that was accidentally
